adding charts data.

--- a/notebooks/data_generator_and_db_models.ipynb
+++ b/notebooks/data_generator_and_db_models.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from sqlalchemy import create_engine\n",
     "import random\n",
     "import pandas as pd\n",
@@ -27,7 +26,7 @@
     "        _clamp(random.randint(10, 255)),\n",
     "    )\n",
     "\n",
-    "# Download few sample standard datasets\n",
+    "### Download few sample standard datasets\n",
     "\n",
     "df = pd.read_csv(\"https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_dataset/4_ThreeNum.csv\")\n",
     "disk_engine = create_engine('sqlite:///charts_db.db')\n",
@@ -38,7 +37,8 @@
     "df = pd.read_csv(\"https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_dataset/6_SeveralNum.csv\")\n",
     "df.rename(columns = {\"Unnamed: 0\":\"label\"}, inplace = True)\n",
     "disk_engine = create_engine('sqlite:///charts_db.db')\n",
-    "df.to_sql('mtcars_data', disk_engine, if_exists='append')"
+    "df.to_sql('mtcars_data', disk_engine, if_exists='append')\n",
+    "pd.read_csv(\"https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/data_correlogram.csv\").rename(columns = {\"Unnamed: 0\":\"label\"}).round(4).to_sql('correlogram_data_table', disk_engine, if_exists='append')"
    ]
   },
   {
@@ -371,6 +371,7 @@
    "outputs": [],
    "source": [
     "### Read data from DB\n",
+    "\n",
     "df = pd.read_sql_query('SELECT * FROM gdp_data',disk_engine)\n",
     "df = df.drop(['index'], axis = 1)\n",
     "df = df.rename(columns = {\"gdpPercap\":\"x\",\"lifeExp\":\"y\",\"pop\":\"z\",\"country\":'label'})\n",
@@ -378,10 +379,99 @@
     "colour_df['fill'] = [col_gen() for _ in range(len(colour_df))]\n",
     "disk_engine = create_engine('sqlite:///charts_db.db')\n",
     "colour_df.to_sql('gdp_data_fill', disk_engine, if_exists='append')\n",
+    "\n",
     "### Parse data for chart\n",
     "\n",
     "response_payload = {\"data\":df.to_dict(\"records\"),\"fill\":colour_df.to_dict(\"records\")}\n",
     "response_payload"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Correlogram\n",
+    "\n",
+    "* __Reference:__ https://d3-graph-gallery.com/graph/correlogram_basic.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Read data from DB\n",
+    "\n",
+    "df = pd.read_sql_query('SELECT * FROM correlogram_data_table',disk_engine)\n",
+    "\n",
+    "\n",
+    "### Parse data for chart\n",
+    "\n",
+    "df = df.drop(['index'], axis = 1)\n",
+    "df = df.set_index('label')\n",
+    "df.index.name = None\n",
+    "df_dict = df.to_dict(\"split\")\n",
+    "data_collector = []\n",
+    "for x in df_dict[\"index\"]:\n",
+    "    for y in df_dict[\"columns\"]:\n",
+    "        data_collector.append(\n",
+    "            {\"x\": x, \"y\": y, \"value\": float(df.loc[x, y].round(4))}\n",
+    "        )\n",
+    "response_payload = {\"data\":data_collector,\"fill\":None}\n",
+    "response_payload"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Histogram\n",
+    "\n",
+    "\n",
+    "* __Reference:__ https://codesandbox.io/s/new-field-u5oze"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Generate data\n",
+    "\n",
+    "step=50\n",
+    "s = pd.Series(np.random.uniform(0, 1000, size=1000)) # This is the data\n",
+    "bin_range = np.arange(-200, 1000 + step, step)\n",
+    "out, bins = pd.cut(\n",
+    "    s, bins=bin_range, include_lowest=True, right=False, retbins=True\n",
+    ")\n",
+    "df = (\n",
+    "    out.value_counts()\n",
+    "    .to_frame()\n",
+    "    .reset_index()\n",
+    "    .rename(columns={\"index\": \"name\", 0: \"freq\"})\n",
+    ")\n",
+    "x_col = []\n",
+    "for x in df[\"name\"]:\n",
+    "    x_col.append(x.mid)\n",
+    "df[\"name\"] = df[\"name\"].astype(str)\n",
+    "df[\"name\"] = df[\"name\"].str.replace(\"\\[\", \"\", regex=True)\n",
+    "df[\"name\"] = df[\"name\"].str.replace(\"\\)\", \"\", regex=True)\n",
+    "df[\"name\"] = df[\"name\"].str.replace(\"\\,\", \" -\", regex=True)\n",
+    "df[\"value\"] = x_col\n",
+    "df = df.rename(columns={\"name\": \"label\"})\n",
+    "\n",
+    "### Parse data for chart\n",
+    "\n",
+    "df.to_dict(\"records\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Waterfall chart"
    ]
   }
  ],
