adding sample charts in the nb.

--- a/notebooks/data_generator_and_db_models.ipynb
+++ b/notebooks/data_generator_and_db_models.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sqlalchemy import create_engine\n",
     "import random\n",
@@ -45,22 +56,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Donut chart\n",
+    "## __Donut chart:__\n",
     "\n",
     "* Two tables: data and fill\n",
     "* In data table it will have two columns: label and value\n",
     "* In fill table it will have two columns: label and color\n",
     "* As next step we need to have a drop down menu which will filter the data which has to be shown in the chart and in the backend we will send a list of key value pair where value will be of the same format as it is for a single selection of the drop down menu.\n",
     "\n",
+    "### __Expected output:__\n",
+    "\n",
+    "```\n",
+    "[{'label': 'Michael Tacadina', 'value': 24, 'fill': '#a72b31'},\n",
+    " {'label': 'John Thomas', 'value': 22, 'fill': '#fdb134'},\n",
+    " {'label': 'Carrie Carter', 'value': 81, 'fill': '#395f5b'},\n",
+    " {'label': 'Catherine Henry', 'value': 33, 'fill': '#2cdcf3'},\n",
+    " {'label': 'Stephanie Horton', 'value': 49, 'fill': '#8df85c'},\n",
+    " {'label': 'Reggie Miller', 'value': 23, 'fill': '#37c19f'},\n",
+    " {'label': 'Bernard Bushman', 'value': 6, 'fill': '#74ecd7'},\n",
+    " {'label': 'Kenneth Rubio', 'value': 98, 'fill': '#e1d1c1'},\n",
+    " {'label': 'Idella Corda', 'value': 35, 'fill': '#ca7cff'},\n",
+    " {'label': 'Kay Kaye', 'value': 22, 'fill': '#79d2b6'}]\n",
+    "```\n",
     "\n",
     "* __Reference:__ https://codesandbox.io/s/6hr9o"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'Michael Tacadina', 'value': 24, 'fill': '#a72b31'},\n",
+       " {'label': 'John Thomas', 'value': 22, 'fill': '#fdb134'},\n",
+       " {'label': 'Carrie Carter', 'value': 81, 'fill': '#395f5b'},\n",
+       " {'label': 'Catherine Henry', 'value': 33, 'fill': '#2cdcf3'},\n",
+       " {'label': 'Stephanie Horton', 'value': 49, 'fill': '#8df85c'},\n",
+       " {'label': 'Reggie Miller', 'value': 23, 'fill': '#37c19f'},\n",
+       " {'label': 'Bernard Bushman', 'value': 6, 'fill': '#74ecd7'},\n",
+       " {'label': 'Kenneth Rubio', 'value': 98, 'fill': '#e1d1c1'},\n",
+       " {'label': 'Idella Corda', 'value': 35, 'fill': '#ca7cff'},\n",
+       " {'label': 'Kay Kaye', 'value': 22, 'fill': '#79d2b6'}]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### Generate data\n",
     "\n",
@@ -96,7 +141,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stacked Bar Chart\n",
+    "# __Stacked Bar Chart__\n",
+    "\n",
+    "* `label` : x axis\n",
+    "* `q, y,x`: values to be plotted in y axis\n",
+    "* `fill`: colors of `q, y, x` to be plotted in chart\n",
+    "\n",
+    "\n",
+    "### __Expected output format:__\n",
+    "\n",
+    "```\n",
+    "{'data': [{'label': 'Jordan Yates', 'y': 58.19, 'q': 87.72, 's': 13.3},\n",
+    "  {'label': 'Donald Mandich', 'y': 51.34, 'q': 29.0, 's': 85.66},\n",
+    "  {'label': 'Marie Cox', 'y': 51.56, 'q': 68.82, 's': 56.37},\n",
+    "  {'label': 'Glenn Davis', 'y': 37.87, 'q': 37.81, 's': 4.66},\n",
+    "  {'label': 'Judith Mouret', 'y': 79.04, 'q': 2.17, 's': 62.1},\n",
+    "  {'label': 'Gregoria Schupp', 'y': 47.83, 'q': 35.85, 's': 28.11}],\n",
+    " 'fill': [{'label': 'y', 'fill': '#d14aac'},\n",
+    "  {'label': 'q', 'fill': '#2dff71'},\n",
+    "  {'label': 's', 'fill': '#bd825e'}]}\n",
+    "```\n",
     "\n",
     "\n",
     "* __Reference:__ https://www.geeksforgeeks.org/create-a-stacked-bar-chart-using-recharts-in-reactjs/"
@@ -104,11 +168,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': [{'label': 'Jordan Yates', 'y': 58.19, 'q': 87.72, 's': 13.3},\n",
+       "  {'label': 'Donald Mandich', 'y': 51.34, 'q': 29.0, 's': 85.66},\n",
+       "  {'label': 'Marie Cox', 'y': 51.56, 'q': 68.82, 's': 56.37},\n",
+       "  {'label': 'Glenn Davis', 'y': 37.87, 'q': 37.81, 's': 4.66},\n",
+       "  {'label': 'Judith Mouret', 'y': 79.04, 'q': 2.17, 's': 62.1},\n",
+       "  {'label': 'Gregoria Schupp', 'y': 47.83, 'q': 35.85, 's': 28.11}],\n",
+       " 'fill': [{'label': 'y', 'fill': '#d14aac'},\n",
+       "  {'label': 'q', 'fill': '#2dff71'},\n",
+       "  {'label': 's', 'fill': '#bd825e'}]}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### Generate data\n",
+    "\n",
     "n_label = 6\n",
     "n_var = 3\n",
     "label = [names.get_full_name() for _ in range(n_label)]\n",
@@ -151,14 +235,52 @@
    "source": [
     "# Line chart\n",
     "\n",
+    "* `label` values to be shown in x axis\n",
+    "* `q, j. o` are values to be shown in y axis. this number may vary\n",
+    "* `fill` the color code of the q, j and o has to be populated from `fill` key\n",
+    "\n",
+    "### __Expected output format:__\n",
+    "\n",
+    "\n",
+    "```\n",
+    "{'data': [{'label': 'Elsie Bahr', 'q': 4.06, 'j': 80.86, 'o': 53.18},\n",
+    "  {'label': 'Barbara Brown', 'q': 14.81, 'j': 2.42, 'o': 13.32},\n",
+    "  {'label': 'Kyle Garza', 'q': 29.38, 'j': 84.08, 'o': 12.12},\n",
+    "  {'label': 'John Miller', 'q': 70.11, 'j': 53.58, 'o': 43.44},\n",
+    "  {'label': 'Kermit Collison', 'q': 48.75, 'j': 64.24, 'o': 35.52},\n",
+    "  {'label': 'Philip Oliveira', 'q': 98.84, 'j': 26.04, 'o': 69.33}],\n",
+    " 'fill': [{'label': 'q', 'fill': '#b73fba'},\n",
+    "  {'label': 'j', 'fill': '#51a3cc'},\n",
+    "  {'label': 'o', 'fill': '#7f9356'}]}\n",
+    "\n",
+    "```\n",
     "* __Reference:__ https://www.geeksforgeeks.org/create-a-line-chart-using-recharts-in-reactjs/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': [{'label': 'Elsie Bahr', 'q': 4.06, 'j': 80.86, 'o': 53.18},\n",
+       "  {'label': 'Barbara Brown', 'q': 14.81, 'j': 2.42, 'o': 13.32},\n",
+       "  {'label': 'Kyle Garza', 'q': 29.38, 'j': 84.08, 'o': 12.12},\n",
+       "  {'label': 'John Miller', 'q': 70.11, 'j': 53.58, 'o': 43.44},\n",
+       "  {'label': 'Kermit Collison', 'q': 48.75, 'j': 64.24, 'o': 35.52},\n",
+       "  {'label': 'Philip Oliveira', 'q': 98.84, 'j': 26.04, 'o': 69.33}],\n",
+       " 'fill': [{'label': 'q', 'fill': '#b73fba'},\n",
+       "  {'label': 'j', 'fill': '#51a3cc'},\n",
+       "  {'label': 'o', 'fill': '#7f9356'}]}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### Generate data\n",
     "n_label = 6\n",
@@ -464,14 +586,69 @@
     "\n",
     "### Parse data for chart\n",
     "\n",
-    "df.to_dict(\"records\")"
+    "\n",
+    "\n",
+    "response_payload = {\"data\":df.to_dict(\"records\"),\"fill\":col_gen()}\n",
+    "response_payload"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Waterfall chart"
+    "# Waterfall chart\n",
+    "\n",
+    "\n",
+    "* __Reference:__ https://codesandbox.io/s/new-field-u5oze"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def random_dates(\n",
+    "    start=pd.to_datetime(\"2015-01-01\"),\n",
+    "    end=pd.to_datetime(\"2018-01-01\"),\n",
+    "    unit=\"D\",\n",
+    "    seed=None,\n",
+    "):\n",
+    "    n = random.randint(4, 12)\n",
+    "    if not seed:  # from piR's answer\n",
+    "        np.random.seed(0)\n",
+    "    ndays = (end - start).days + 1\n",
+    "    return pd.to_timedelta(np.random.rand(n) * ndays, unit=unit) + start\n",
+    "\n",
+    "\n",
+    "def _waterfall_payload_generator():\n",
+    "    dates_list = (\n",
+    "        pd.Series(random_dates().sort_values())\n",
+    "        .dt.to_period(\"M\")\n",
+    "        .drop_duplicates()\n",
+    "        .astype(str)\n",
+    "        .tolist()\n",
+    "    )\n",
+    "    old_list = [{\"uv\": float(np.random.uniform(2700, 4500, 1)), \"pv\": 0}]\n",
+    "    for index in range(1, len(dates_list)):\n",
+    "        old_list.append(\n",
+    "            {\n",
+    "                \"uv\": old_list[index - 1][\"uv\"] + old_list[index - 1][\"pv\"],\n",
+    "                \"pv\": float(np.random.uniform(-500, 500, 1)),\n",
+    "            }\n",
+    "        )\n",
+    "    old_list[len(dates_list) - 1][\"pv\"] = 0\n",
+    "    df = pd.DataFrame(old_list)\n",
+    "    df[\"date\"] = dates_list\n",
+    "    df = df.round(2)\n",
+    "    df[\"date\"] = df[\"date\"].astype(str)\n",
+    "    df = df.rename(columns = {'date':'label'})\n",
+    "    df.loc[df['label'] ==df['label'].max(),'label'] = 'total'\n",
+    "    return df.to_dict(\"records\")\n",
+    "\n",
+    "\n",
+    "response_payload = {\"data\":_waterfall_payload_generator(),\"fill\":None}\n",
+    "response_payload"
    ]
   }
  ],
