adding db ping crud docker.

--- a/notebooks/job_template.ipynb
+++ b/notebooks/job_template.ipynb
@@ -203,37 +203,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "engine is valid\n"
+      "2022-04-12 13:22:18.516 | INFO     | __main__:<module>:9 - engine is valid\n"
      ]
     }
    ],
    "source": [
     "import sqlalchemy\n",
-    "\n",
+    "from loguru import logger\n",
     "\n",
     "disk_engine = sqlalchemy.create_engine('sqlite:///data_db.db', echo=False)\n",
     "\n",
     "try:\n",
     "    with disk_engine.connect() as con:\n",
     "        con.execute(\"SELECT 1\")\n",
-    "    print('engine is valid')\n",
+    "    logger.info('engine is valid')\n",
     "except Exception as e:\n",
-    "    print(f'Engine invalid: {str(e)}')\n",
+    "    logger.info(f'Engine invalid: {str(e)}')\n",
     "\n",
     "\n",
-    "df_iris.to_sql(name='iris_dbo', con= disk_engine, if_exists='replace', index=False, dtype={'name_of_datefld': sqlalchemy.types.DateTime(), \n",
-    "'sepal_length': sqlalchemy.types.Float(precision=4, asdecimal=True),\n",
-    "'sepal_width': sqlalchemy.types.Float(precision=4, asdecimal=True),\n",
-    "'petal_length': sqlalchemy.types.Float(precision=4, asdecimal=True),\n",
-    "'petal_width': sqlalchemy.types.Float(precision=4, asdecimal=True),\n",
-    "'target': sqlalchemy.types.INTEGER()},chunksize=100, method=\"multi\")"
+    "df_iris.to_sql(name='iris', \n",
+    "            con= disk_engine,\n",
+    "            if_exists='replace',\n",
+    "            index=False,\n",
+    "            dtype={'name_of_datefld': sqlalchemy.types.DateTime(), \n",
+    "                'sepal_length': sqlalchemy.types.Float(precision=4, asdecimal=True),\n",
+    "                'sepal_width': sqlalchemy.types.Float(precision=4, asdecimal=True),\n",
+    "                'petal_length': sqlalchemy.types.Float(precision=4, asdecimal=True),\n",
+    "                'petal_width': sqlalchemy.types.Float(precision=4, asdecimal=True),\n",
+    "                'target': sqlalchemy.types.INTEGER()},\n",
+    "            chunksize=100,\n",
+    "            method=\"multi\")"
    ]
   },
   {
