Adding stuff and video link.

--- a/notebooks/job_template.ipynb
+++ b/notebooks/job_template.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-04-12 17:06:17.407 | INFO     | __main__:<module>:13 - Engine is valid\n"
+      "2022-04-12 17:16:23.030 | INFO     | __main__:<module>:13 - Engine is valid\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "4     0.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "4           5.0          3.6           1.4          0.2       0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "(150, 5)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,14 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-04-12 17:06:17.892 | INFO     | __main__:<module>:28 - engine is valid\n"
+      "2022-04-12 17:19:47.224 | INFO     | __main__:<module>:28 - engine is valid\n"
      ]
     },
     {
@@ -439,7 +439,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,17 +483,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = iris_df_from_db.drop(columns = ['target'])\n",
-    "y = iris_df_from_db[['target']]\n"
+    "y = iris_df_from_db[['target']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
        "[150 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
        "[150 rows x 1 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
       "  n_iter_i = _check_optimize_result(\n",
-      "2022-04-12 17:06:18.153 | INFO     | __main__:<module>:5 - Storing results for : 079c15a2-9263-49fe-bfea-27862e738b14.\n"
+      "2022-04-12 17:21:13.703 | INFO     | __main__:<module>:5 - Storing results for : 563a9410-61a9-4233-8823-ffcdaf7d83d4.\n"
      ]
     },
     {
@@ -787,7 +787,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>079c15a2-9263-49fe-bfea-27862e738b14</td>\n",
+       "      <td>563a9410-61a9-4233-8823-ffcdaf7d83d4</td>\n",
        "      <td>{\"init_params\": {\"C\": 1.0, \"class_weight\": nul...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -796,13 +796,13 @@
       ],
       "text/plain": [
        "                               model_id  \\\n",
-       "0  079c15a2-9263-49fe-bfea-27862e738b14   \n",
+       "0  563a9410-61a9-4233-8823-ffcdaf7d83d4   \n",
        "\n",
        "                                            response  \n",
        "0  {\"init_params\": {\"C\": 1.0, \"class_weight\": nul...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -830,18 +830,19 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "parameters_df['model_id'] = parameters_df['model_id'].astype(str)\n",
     "parameters_df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,14 +865,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-04-12 17:06:18.318 | INFO     | __main__:<module>:20 - Engine is valid.\n"
+      "2022-04-12 17:23:28.756 | INFO     | __main__:<module>:20 - Engine is valid.\n"
      ]
     },
     {
@@ -1001,7 +1002,7 @@
        "[150 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1047,7 @@
        "'{\"init_params\": {\"C\": 1.0, \"class_weight\": null, \"dual\": false, \"fit_intercept\": true, \"intercept_scaling\": 1, \"l1_ratio\": null, \"max_iter\": 100, \"multi_class\": \"auto\", \"n_jobs\": null, \"penalty\": \"l2\", \"random_state\": null, \"solver\": \"lbfgs\", \"tol\": 0.0001, \"verbose\": 0, \"warm_start\": false}, \"model_params\": {\"coef_\": [[-0.4179559690983556, 0.9661824148400735, -2.5214315192770207, -1.0840052333192296], [0.5307588192150016, -0.3143802929489565, -0.19909553551841389, -0.9489695571862117], [-0.11280285011669776, -0.65180212189115, 2.720527054795414, 2.0329747905054365]], \"intercept_\": [9.838323162947265, 2.2149726370800296, -12.053295800027412], \"classes_\": [0, 1, 2], \"n_iter_\": [100]}}'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1083,15 +1084,22 @@
        "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_from_json = logistic_regression_from_json(model_parameters_json)\n",
-    "model_from_json.predict(X)"
+    "model_object = logistic_regression_from_json(model_parameters_json)\n",
+    "model_object.predict(X)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
